@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a check on valid input keys in the job.ini
   * Fixed the check on dependent calculations
   * Specifying at the same time both a grid and individual sites is an error
 
